# ap_math

./: CMakeLists.txt  LICENSE  README.md  a.out  test.cpp
include/: ap_float.h  ap_int.h
include/ap_int/: composed.h  large.h  simple.h  small.h
include/vecpp/: ap_math.h
include/vecpp/ap_math/: ap_float.h  ap_int.h  limits.h
include/vecpp/ap_math/ap_int/: int_storage.h  large.h  large_signed.h  large_unsigned.h  small.h
tests/: CMakeLists.txt  ap_float.cpp  ap_int.cpp  large_int.cpp  large_uint.cpp  small_int.cpp
